--- a/product.html
+++ b/product.html
@@ -9,7 +9,7 @@
     <link rel="icon" href="./img/icon.png" />
     <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="navbar.css">
-    <link rel="stylesheet" href="./product.css">
+    <link rel="stylesheet" href="product.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
     <!-- font awesome  -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.1/css/all.min.css" integrity="sha512-MV7K8+y+gLIBoVD59lQIYicR65iaqukzvf/nwasF0nqhPay5w/9lJmVM2hMDcnK1OnMGCdVK+iQrJ7lzPJQd1w==" crossorigin="anonymous" referrerpolicy="no-referrer" />
@@ -26,7 +26,7 @@
                     <a href="./index.html">
                         <img src="./img/logo-icon.png" alt="BazzarBuddy">
                     </a>
-                </div> 
+                </div>
                 <div class="searchInputContainer">
                     <div class="searchIcon">
                         <i class="fa-solid fa-magnifying-glass"></i>
@@ -90,34 +90,6 @@
     </nav>
 
     <div class="posterBanners">
-        <div class="LowestPriceBanner">
-            <img src="./img/banner1.png" alt="Lowest Price Banner">
-        </div>
-
-        <div class="topCategoryBanner">
-            <div class="topCategoryHeading">
-                <span class="hrLine"></span>
-                <h1>Top Categories to choose from</h1>
-                <span class="hrLine"></span>
-            </div>
-        </div>
-
-        <div class="FashionStoreBanner">
-            <img src="./img/FashionStore.png" alt="Fashtion Store">
-        </div>
-
-        <div class="EssentiolsBanner">
-            <img src="./img/Essential.png" alt="Essentials">
-        </div>
-
-        <div class="ResselerBanner">
-            <img src="./img/resseler.png" alt="Became Ressler">
-        </div>
-
-        <div class="SupplierBanner">
-            <img src="./img/supplier.png" alt="Supplier">
-        </div>
-
     </div>
 
     <div class="productAndFilter">
@@ -128,6 +100,7 @@
             
         </div>
     </div>
+
 
     <footer class="Bottom-Footer">
         <div>
@@ -196,6 +169,6 @@
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
     <script src="script.js"></script>
-    <script src="./product.js"></script>
+    <script src="product.js"></script>
 </body>
 </html>
