--- a/Admin/index.html
+++ b/Admin/index.html
@@ -91,7 +91,7 @@
                                 <th>Price</th>
                             </tr>
                             <tr>
-                                <td>black simple T-shirt</td>
+                                <td>black Urabne T-shirt</td>
                                 <td>T-shirt</td>
                                 <td>1500/-</td>
                             </tr>
@@ -101,12 +101,12 @@
                                 <td>2500/-</td>
                             </tr>
                             <tr>
-                                <td>black flower T-shirt</td>
+                                <td>black flower shirt</td>
                                 <td>T-shirt</td>
-                                <td>3500/-</td>
+                                <td>300/-</td>
                             </tr>
                             <tr>
-                                <td>black Jeans</td>
+                                <td>Urabne black  Jeans</td>
                                 <td>Jeans</td>
                                 <td>4500/-</td>
                             </tr>
